// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`built-in role grants > ADMIN 1`] = `
{
  "areas": [
    "crm",
    "dashboard",
    "desk@ALL",
    "events@ALL",
    "hr",
    "org",
    "procurement",
  ],
  "baseRole": "ADMIN",
  "grants": [
    "abstracts.criteria.manage@ALL",
    "abstracts.decide@ALL",
    "abstracts.email@ALL",
    "abstracts.export@ALL",
    "abstracts.import@ALL",
    "abstracts.read@ALL",
    "abstracts.reviewers.assign@ALL",
    "abstracts.themes.manage@ALL",
    "abstracts.update@ALL",
    "accommodation.delete@ALL",
    "accommodation.read@ALL",
    "accommodation.write@ALL",
    "activity.org.read",
    "activity.read@ALL",
    "agent.use",
    "analytics.read@ALL",
    "apiKeys.manage",
    "barcode.view",
    "billingAccounts.manage",
    "billingAccounts.read",
    "certificates.issue@ALL",
    "certificates.read@ALL",
    "certificates.reissue@ALL",
    "certificates.templates.manage@ALL",
    "communications.schedule@ALL",
    "communications.send@ALL",
    "contacts.delete",
    "contacts.export",
    "contacts.import",
    "contacts.read",
    "contacts.write",
    "creditNotes.issue@ALL",
    "crm.dealValues.view",
    "crm.delete",
    "crm.export",
    "crm.inbox.read",
    "crm.quoteDefaults.manage",
    "crm.read",
    "crm.write",
    "dtcm.assign@ALL",
    "dtcm.import@ALL",
    "emailLogs.org.read",
    "emailLogs.read@ALL",
    "events.clone@ALL",
    "events.create@ALL",
    "events.delete@ALL",
    "events.export@ALL",
    "events.read@ALL",
    "events.settings@ALL",
    "events.staff.assign",
    "events.update@ALL",
    "finance.view",
    "honorarium.manage@ALL",
    "honorarium.view",
    "hotels.manage@ALL",
    "hr.read",
    "hr.write",
    "imports.eventsair@ALL",
    "invoices.export@ALL",
    "invoices.ledger",
    "invoices.read@ALL",
    "invoices.send@ALL",
    "invoices.write@ALL",
    "loginActivity.read",
    "mcp.connect",
    "media.library.manage",
    "media.manage@ALL",
    "media.read@ALL",
    "org.credentials",
    "org.settings",
    "payments.record@ALL",
    "payments.refund@ALL",
    "procurement.budgets.create",
    "procurement.budgets.discard",
    "procurement.budgets.edit",
    "procurement.budgets.view",
    "procurement.catalogue.manage",
    "procurement.integrations.manage",
    "procurement.orders.cancel",
    "procurement.orders.receive",
    "procurement.orders.send",
    "procurement.orders.view",
    "procurement.requests.manage",
    "procurement.requests.view",
    "procurement.suppliers.financials.view",
    "procurement.suppliers.transfer",
    "procurement.suppliers.view",
    "promo.delete@ALL",
    "promo.read@ALL",
    "promo.write@ALL",
    "proposals.decide@ALL",
    "proposals.export@ALL",
    "proposals.read@ALL",
    "proposals.themes.manage@ALL",
    "registrations.badges.print@ALL",
    "registrations.bulk@ALL",
    "registrations.cancel@ALL",
    "registrations.checkin@ALL",
    "registrations.create@ALL",
    "registrations.delete@ALL",
    "registrations.email.change@ALL",
    "registrations.email@ALL",
    "registrations.export@ALL",
    "registrations.import@ALL",
    "registrations.promo.apply@ALL",
    "registrations.read@ALL",
    "registrations.share@ALL",
    "registrations.update@ALL",
    "reimbursements.manage@ALL",
    "reviewers.pool.manage@ALL",
    "rsvp.manage@ALL",
    "rsvp.roster.read@ALL",
    "sessions.delete@ALL",
    "sessions.read@ALL",
    "sessions.write@ALL",
    "speakers.agreements.manage@ALL",
    "speakers.companion.grant@ALL",
    "speakers.create@ALL",
    "speakers.delete@ALL",
    "speakers.documents.open@ALL",
    "speakers.documents.read@ALL",
    "speakers.documents.write@ALL",
    "speakers.email@ALL",
    "speakers.import@ALL",
    "speakers.read@ALL",
    "speakers.update@ALL",
    "sponsors.manage@ALL",
    "sponsors.read@ALL",
    "submissions.share@ALL",
    "supportingDocs.view",
    "surveys.export@ALL",
    "surveys.manage@ALL",
    "surveys.read@ALL",
    "surveys.reset@ALL",
    "templates.manage@ALL",
    "templates.read@ALL",
    "tickets.delete@ALL",
    "tickets.read@ALL",
    "tickets.write@ALL",
    "tracks.write@ALL",
    "travelGrants.manage@ALL",
    "users.invite",
    "users.manage",
    "users.read",
    "webinar.analytics.read@ALL",
    "webinar.attendance.export@ALL",
    "webinar.manage@ALL",
    "zoom.meetings.manage@ALL",
    "zoomHost.view",
  ],
  "impliedPersonGrants": [],
}
`;

exports[`built-in role grants > API_KEY 1`] = `
{
  "areas": [],
  "baseRole": null,
  "grants": [
    "abstracts.criteria.manage@ALL",
    "abstracts.decide@ALL",
    "abstracts.read@ALL",
    "abstracts.reviewers.assign@ALL",
    "abstracts.themes.manage@ALL",
    "accommodation.read@ALL",
    "accommodation.write@ALL",
    "analytics.read@ALL",
    "barcode.view",
    "certificates.read@ALL",
    "certificates.templates.manage@ALL",
    "communications.schedule@ALL",
    "communications.send@ALL",
    "contacts.delete",
    "contacts.export",
    "contacts.import",
    "contacts.read",
    "contacts.write",
    "crm.dealValues.view",
    "crm.delete",
    "crm.export",
    "crm.inbox.read",
    "crm.read",
    "crm.write",
    "events.create@ALL",
    "events.read@ALL",
    "events.settings@ALL",
    "events.update@ALL",
    "finance.view",
    "hotels.manage@ALL",
    "invoices.read@ALL",
    "invoices.send@ALL",
    "invoices.write@ALL",
    "media.read@ALL",
    "promo.delete@ALL",
    "promo.read@ALL",
    "promo.write@ALL",
    "registrations.bulk@ALL",
    "registrations.checkin@ALL",
    "registrations.create@ALL",
    "registrations.export@ALL",
    "registrations.read@ALL",
    "registrations.update@ALL",
    "rsvp.roster.read@ALL",
    "sessions.read@ALL",
    "sessions.write@ALL",
    "speakers.agreements.manage@ALL",
    "speakers.create@ALL",
    "speakers.read@ALL",
    "speakers.update@ALL",
    "sponsors.manage@ALL",
    "sponsors.read@ALL",
    "templates.manage@ALL",
    "templates.read@ALL",
    "tickets.read@ALL",
    "tickets.write@ALL",
    "tracks.write@ALL",
    "webinar.analytics.read@ALL",
    "zoom.meetings.manage@ALL",
    "zoomHost.view",
  ],
  "impliedPersonGrants": [],
}
`;

exports[`built-in role grants > CRM_USER 1`] = `
{
  "areas": [
    "crm",
  ],
  "baseRole": "CRM_USER",
  "grants": [
    "contacts.read",
    "crm.dealValues.view",
    "crm.delete",
    "crm.inbox.read",
    "crm.read",
    "crm.write",
    "hr.read",
    "hr.write",
  ],
  "impliedPersonGrants": [],
}
`;

exports[`built-in role grants > HR_USER 1`] = `
{
  "areas": [
    "hr",
  ],
  "baseRole": "HR_USER",
  "grants": [
    "hr.read",
    "hr.write",
  ],
  "impliedPersonGrants": [
    "hrAccess",
  ],
}
`;

exports[`built-in role grants > MEMBER 1`] = `
{
  "areas": [
    "crm",
    "dashboard",
    "desk@ALL",
    "events@ALL",
    "hr",
    "org",
    "procurement",
  ],
  "baseRole": "MEMBER",
  "grants": [
    "abstracts.read@ALL",
    "accommodation.read@ALL",
    "agent.use",
    "analytics.read@ALL",
    "billingAccounts.read",
    "contacts.export",
    "contacts.read",
    "events.read@ALL",
    "finance.view",
    "hr.read",
    "hr.write",
    "invoices.export@ALL",
    "invoices.ledger",
    "invoices.read@ALL",
    "payments.record@ALL",
    "promo.read@ALL",
    "proposals.read@ALL",
    "registrations.badges.print@ALL",
    "registrations.checkin@ALL",
    "registrations.create@ALL",
    "registrations.read@ALL",
    "registrations.update@ALL",
    "sessions.read@ALL",
    "speakers.documents.read@ALL",
    "speakers.read@ALL",
    "sponsors.read@ALL",
    "surveys.read@ALL",
    "templates.read@ALL",
    "tickets.read@ALL",
    "users.read",
    "webinar.analytics.read@ALL",
  ],
  "impliedPersonGrants": [],
}
`;

exports[`built-in role grants > ONSITE 1`] = `
{
  "areas": [
    "desk@ASSIGNED",
  ],
  "baseRole": "ONSITE",
  "grants": [
    "abstracts.read@ASSIGNED",
    "analytics.read@ASSIGNED",
    "barcode.view",
    "billingAccounts.read",
    "dtcm.assign@ASSIGNED",
    "events.read@ASSIGNED",
    "finance.view",
    "hr.read",
    "hr.write",
    "invoices.export@ASSIGNED",
    "invoices.read@ASSIGNED",
    "payments.record@ASSIGNED",
    "promo.read@ASSIGNED",
    "proposals.read@ASSIGNED",
    "registrations.badges.print@ASSIGNED",
    "registrations.checkin@ASSIGNED",
    "registrations.create@ASSIGNED",
    "registrations.export@ASSIGNED",
    "registrations.read@ASSIGNED",
    "registrations.update@ASSIGNED",
    "sessions.read@ASSIGNED",
    "speakers.read@ASSIGNED",
    "sponsors.read@ASSIGNED",
    "tickets.read@ASSIGNED",
    "webinar.analytics.read@ASSIGNED",
  ],
  "impliedPersonGrants": [],
}
`;

exports[`built-in role grants > ORGANIZER 1`] = `
{
  "areas": [
    "crm",
    "dashboard",
    "desk@ALL",
    "events@ALL",
    "hr",
    "org",
    "procurement",
  ],
  "baseRole": "ORGANIZER",
  "grants": [
    "abstracts.criteria.manage@ALL",
    "abstracts.decide@ALL",
    "abstracts.email@ALL",
    "abstracts.export@ALL",
    "abstracts.import@ALL",
    "abstracts.read@ALL",
    "abstracts.reviewers.assign@ALL",
    "abstracts.themes.manage@ALL",
    "abstracts.update@ALL",
    "accommodation.delete@ALL",
    "accommodation.read@ALL",
    "accommodation.write@ALL",
    "activity.read@ALL",
    "agent.use",
    "analytics.read@ALL",
    "barcode.view",
    "billingAccounts.manage",
    "billingAccounts.read",
    "certificates.issue@ALL",
    "certificates.read@ALL",
    "certificates.reissue@ALL",
    "certificates.templates.manage@ALL",
    "communications.schedule@ALL",
    "communications.send@ALL",
    "contacts.delete",
    "contacts.export",
    "contacts.import",
    "contacts.read",
    "contacts.write",
    "creditNotes.issue@ALL",
    "dtcm.assign@ALL",
    "dtcm.import@ALL",
    "emailLogs.org.read",
    "emailLogs.read@ALL",
    "events.clone@ALL",
    "events.create@ALL",
    "events.delete@ALL",
    "events.export@ALL",
    "events.read@ALL",
    "events.settings@ALL",
    "events.staff.assign",
    "events.update@ALL",
    "finance.view",
    "honorarium.manage@ALL",
    "honorarium.view",
    "hotels.manage@ALL",
    "hr.read",
    "hr.write",
    "imports.eventsair@ALL",
    "invoices.export@ALL",
    "invoices.ledger",
    "invoices.read@ALL",
    "invoices.send@ALL",
    "invoices.write@ALL",
    "media.library.manage",
    "media.manage@ALL",
    "media.read@ALL",
    "payments.record@ALL",
    "payments.refund@ALL",
    "promo.delete@ALL",
    "promo.read@ALL",
    "promo.write@ALL",
    "proposals.decide@ALL",
    "proposals.export@ALL",
    "proposals.read@ALL",
    "proposals.themes.manage@ALL",
    "registrations.badges.print@ALL",
    "registrations.bulk@ALL",
    "registrations.cancel@ALL",
    "registrations.checkin@ALL",
    "registrations.create@ALL",
    "registrations.delete@ALL",
    "registrations.email.change@ALL",
    "registrations.email@ALL",
    "registrations.export@ALL",
    "registrations.import@ALL",
    "registrations.promo.apply@ALL",
    "registrations.read@ALL",
    "registrations.share@ALL",
    "registrations.update@ALL",
    "reimbursements.manage@ALL",
    "reviewers.pool.manage@ALL",
    "rsvp.manage@ALL",
    "rsvp.roster.read@ALL",
    "sessions.delete@ALL",
    "sessions.read@ALL",
    "sessions.write@ALL",
    "speakers.agreements.manage@ALL",
    "speakers.companion.grant@ALL",
    "speakers.create@ALL",
    "speakers.delete@ALL",
    "speakers.documents.open@ALL",
    "speakers.documents.read@ALL",
    "speakers.documents.write@ALL",
    "speakers.email@ALL",
    "speakers.import@ALL",
    "speakers.read@ALL",
    "speakers.update@ALL",
    "sponsors.manage@ALL",
    "sponsors.read@ALL",
    "submissions.share@ALL",
    "supportingDocs.view",
    "surveys.export@ALL",
    "surveys.manage@ALL",
    "surveys.read@ALL",
    "surveys.reset@ALL",
    "templates.manage@ALL",
    "templates.read@ALL",
    "tickets.delete@ALL",
    "tickets.read@ALL",
    "tickets.write@ALL",
    "tracks.write@ALL",
    "travelGrants.manage@ALL",
    "users.read",
    "webinar.analytics.read@ALL",
    "webinar.attendance.export@ALL",
    "webinar.manage@ALL",
    "zoom.meetings.manage@ALL",
    "zoomHost.view",
  ],
  "impliedPersonGrants": [],
}
`;

exports[`built-in role grants > SUPER_ADMIN 1`] = `
{
  "areas": [
    "crm",
    "dashboard",
    "desk@ALL",
    "events@ALL",
    "hr",
    "operator",
    "org",
    "procurement",
  ],
  "baseRole": "SUPER_ADMIN",
  "grants": [
    "abstracts.criteria.manage@ALL",
    "abstracts.decide@ALL",
    "abstracts.delete@ALL",
    "abstracts.email@ALL",
    "abstracts.export@ALL",
    "abstracts.import@ALL",
    "abstracts.read@ALL",
    "abstracts.reviewers.assign@ALL",
    "abstracts.themes.manage@ALL",
    "abstracts.update@ALL",
    "accommodation.delete@ALL",
    "accommodation.read@ALL",
    "accommodation.write@ALL",
    "activity.org.read",
    "activity.read@ALL",
    "agent.use",
    "analytics.read@ALL",
    "apiKeys.internalTier",
    "apiKeys.manage",
    "barcode.view",
    "billingAccounts.manage",
    "billingAccounts.read",
    "certificates.issue@ALL",
    "certificates.read@ALL",
    "certificates.reissue@ALL",
    "certificates.templates.manage@ALL",
    "communications.schedule@ALL",
    "communications.send@ALL",
    "contacts.delete",
    "contacts.export",
    "contacts.import",
    "contacts.read",
    "contacts.write",
    "creditNotes.issue@ALL",
    "crm.dealValues.view",
    "crm.delete",
    "crm.export",
    "crm.inbox.read",
    "crm.purge",
    "crm.quoteDefaults.manage",
    "crm.read",
    "crm.write",
    "dtcm.assign@ALL",
    "dtcm.import@ALL",
    "emailLogs.org.read",
    "emailLogs.read@ALL",
    "events.clone@ALL",
    "events.create@ALL",
    "events.delete@ALL",
    "events.export@ALL",
    "events.read@ALL",
    "events.settings@ALL",
    "events.staff.assign",
    "events.update@ALL",
    "finance.view",
    "honorarium.manage@ALL",
    "honorarium.view",
    "hotels.manage@ALL",
    "hr.read",
    "hr.write",
    "imports.eventsair@ALL",
    "invoices.export@ALL",
    "invoices.ledger",
    "invoices.read@ALL",
    "invoices.send@ALL",
    "invoices.write@ALL",
    "loginActivity.read",
    "mcp.connect",
    "media.library.manage",
    "media.manage@ALL",
    "media.read@ALL",
    "org.credentials",
    "org.settings",
    "payments.record@ALL",
    "payments.refund@ALL",
    "procurement.approvalChain.manage",
    "procurement.budgets.create",
    "procurement.budgets.discard",
    "procurement.budgets.edit",
    "procurement.budgets.view",
    "procurement.catalogue.manage",
    "procurement.integrations.manage",
    "procurement.orders.cancel",
    "procurement.orders.receive",
    "procurement.orders.send",
    "procurement.orders.view",
    "procurement.requests.manage",
    "procurement.requests.view",
    "procurement.suppliers.decide",
    "procurement.suppliers.financials.view",
    "procurement.suppliers.transfer",
    "procurement.suppliers.view",
    "promo.delete@ALL",
    "promo.read@ALL",
    "promo.write@ALL",
    "proposals.decide@ALL",
    "proposals.export@ALL",
    "proposals.read@ALL",
    "proposals.themes.manage@ALL",
    "registrations.badges.print@ALL",
    "registrations.bulk@ALL",
    "registrations.cancel@ALL",
    "registrations.checkin@ALL",
    "registrations.create@ALL",
    "registrations.delete@ALL",
    "registrations.email.change@ALL",
    "registrations.email@ALL",
    "registrations.export@ALL",
    "registrations.import@ALL",
    "registrations.promo.apply@ALL",
    "registrations.read@ALL",
    "registrations.share@ALL",
    "registrations.update@ALL",
    "reimbursements.manage@ALL",
    "reviewers.pool.manage@ALL",
    "roles.manage",
    "rsvp.manage@ALL",
    "rsvp.roster.read@ALL",
    "sessions.delete@ALL",
    "sessions.read@ALL",
    "sessions.write@ALL",
    "speakers.agreements.manage@ALL",
    "speakers.companion.grant@ALL",
    "speakers.create@ALL",
    "speakers.delete@ALL",
    "speakers.documents.open@ALL",
    "speakers.documents.read@ALL",
    "speakers.documents.write@ALL",
    "speakers.email@ALL",
    "speakers.import@ALL",
    "speakers.read@ALL",
    "speakers.update@ALL",
    "sponsors.manage@ALL",
    "sponsors.read@ALL",
    "submissions.share@ALL",
    "supportingDocs.view",
    "surveys.export@ALL",
    "surveys.manage@ALL",
    "surveys.read@ALL",
    "surveys.reset@ALL",
    "templates.manage@ALL",
    "templates.read@ALL",
    "tickets.delete@ALL",
    "tickets.read@ALL",
    "tickets.write@ALL",
    "tracks.write@ALL",
    "travelGrants.manage@ALL",
    "users.invite",
    "users.manage",
    "users.read",
    "webinar.analytics.read@ALL",
    "webinar.attendance.export@ALL",
    "webinar.manage@ALL",
    "zoom.meetings.manage@ALL",
    "zoomHost.view",
  ],
  "impliedPersonGrants": [
    "hrAccess",
  ],
}
`;

exports[`built-in role grants > WEBINARS 1`] = `
{
  "areas": [
    "desk@ALL",
    "events@WEBINAR",
    "procurement",
  ],
  "baseRole": "WEBINARS",
  "grants": [
    "abstracts.read@WEBINAR",
    "analytics.read@WEBINAR",
    "barcode.view",
    "billingAccounts.read",
    "communications.schedule@WEBINAR",
    "communications.send@WEBINAR",
    "dtcm.assign@ALL",
    "emailLogs.read@ALL",
    "events.create@WEBINAR",
    "events.read@ALL",
    "events.settings@WEBINAR",
    "events.update@WEBINAR",
    "finance.view",
    "hr.read",
    "hr.write",
    "invoices.export@WEBINAR",
    "invoices.read@WEBINAR",
    "media.manage@WEBINAR",
    "media.read@WEBINAR",
    "payments.record@ALL",
    "promo.read@WEBINAR",
    "proposals.read@WEBINAR",
    "registrations.badges.print@ALL",
    "registrations.bulk@WEBINAR",
    "registrations.checkin@ALL",
    "registrations.create@ALL",
    "registrations.email.change@WEBINAR",
    "registrations.email@WEBINAR",
    "registrations.export@ALL",
    "registrations.import@WEBINAR",
    "registrations.read@ALL",
    "registrations.update@ALL",
    "sessions.delete@WEBINAR",
    "sessions.read@WEBINAR",
    "sessions.write@WEBINAR",
    "speakers.create@WEBINAR",
    "speakers.delete@WEBINAR",
    "speakers.email@WEBINAR",
    "speakers.import@WEBINAR",
    "speakers.read@WEBINAR",
    "speakers.update@WEBINAR",
    "sponsors.manage@WEBINAR",
    "sponsors.read@WEBINAR",
    "surveys.export@WEBINAR",
    "surveys.manage@WEBINAR",
    "surveys.read@WEBINAR",
    "templates.manage@WEBINAR",
    "templates.read@WEBINAR",
    "tickets.delete@WEBINAR",
    "tickets.read@WEBINAR",
    "tickets.write@WEBINAR",
    "tracks.write@WEBINAR",
    "webinar.analytics.read@WEBINAR",
    "webinar.attendance.export@WEBINAR",
    "webinar.manage@WEBINAR",
    "zoom.meetings.manage@WEBINAR",
    "zoomHost.view",
  ],
  "impliedPersonGrants": [],
}
`;

exports[`visibility boundaries by role > answers each boundary per built-in role (with and without the HR tick) and for an API key 1`] = `
{
  "ADMIN": "finance.view barcode.view contacts.read contacts.export registrations.export activity.org.read supportingDocs.view zoomHost.view honorarium.view agent.use crm.read crm.write crm.dealValues.view crm.inbox.read crm.delete crm.export users.manage org.settings",
  "ADMIN+hrAccess": "finance.view barcode.view contacts.read contacts.export registrations.export activity.org.read supportingDocs.view zoomHost.view honorarium.view agent.use hr.read hr.write crm.read crm.write crm.dealValues.view crm.inbox.read crm.delete crm.export users.manage org.settings",
  "API_KEY": "finance.view barcode.view contacts.read contacts.export registrations.export zoomHost.view crm.read crm.write crm.dealValues.view crm.inbox.read crm.delete crm.export",
  "CRM_USER": "contacts.read crm.read crm.write crm.dealValues.view crm.inbox.read crm.delete",
  "HR_USER": "hr.read hr.write",
  "MEMBER": "finance.view contacts.read contacts.export agent.use",
  "ONSITE": "finance.view barcode.view registrations.export",
  "ORGANIZER": "finance.view barcode.view contacts.read contacts.export registrations.export supportingDocs.view zoomHost.view honorarium.view agent.use",
  "SUPER_ADMIN": "finance.view barcode.view contacts.read contacts.export registrations.export activity.org.read supportingDocs.view zoomHost.view honorarium.view agent.use hr.read hr.write crm.read crm.write crm.dealValues.view crm.inbox.read crm.delete crm.export crm.purge users.manage org.settings",
  "WEBINARS": "finance.view barcode.view registrations.export zoomHost.view",
}
`;
